--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <div role="footer" class="footer">
+    <div role="contentinfo" class="footer">
         <p class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
             Coded by <a href="https://github.com/Alfeyn/">Akrem M.</a>.
